# personalFinanceAgent

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  render.yaml
backend/: .env.example  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  schemas.py  seed.py
backend/app/agent/: explainer_node.py  graph.py  guardrail.py  llm.py  parsing.py  planner_node.py  router_node.py  tools.py
backend/app/api/: chat.py  dashboard.py  goals.py  ingest.py
backend/app/categorize/: llm_fallback.py  rules.py  service.py
backend/app/engine/: affordability.py  anomalies.py  cashflow.py  forecast.py  reconcile.py  recurring.py  savings_plan.py  simulate.py
backend/app/ingestion/: csv_parser.py  normalize.py  pdf_ocr_parser.py  pdf_text_parser.py  router.py  types.py
backend/app/ingestion/adapters/: __init__.py  base.py  generic.py  hbl.py  meezan.py
backend/app/retrieval/: sql_guard.py  text_to_sql.py  vector.py
backend/tests/: conftest.py  test_agent_eval.py  test_agent_guardrail.py  test_api.py  test_engine_affordability.py  test_engine_anomalies.py  test_engine_cashflow.py  test_engine_forecast.py  test_engine_reconcile.py  test_engine_recurring.py  test_engine_savings.py  test_engine_simulate.py  test_ingestion_csv.py  test_ingestion_normalize.py  test_ingestion_pdf.py  test_text_to_sql.py  test_vector.py
backend/tests/fixtures/: generic_signed.csv  hbl_bad_reconcile.csv  hbl_jan2026.csv  meezan_feb2026.csv
frontend/: index.html  package-lock.json  package.json  vite.config.ts
sample_data/: generate.py  (+4 more)
(+11 files in other folders)
