[project]
name = "finance-agent-backend"
version = "0.1.0"
description = "FinanceAgent — deterministic engine + LLM orchestration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "python-dateutil>=2.9",
    "pdfplumber>=0.11",
    "anthropic>=0.40",
    "langgraph>=0.2",
    "numpy>=1.26",
]

[project.optional-dependencies]
ocr = ["pdf2image>=1.17", "pytesseract>=0.3.10"]
tables = ["camelot-py[cv]>=0.11"]
embeddings = ["sentence-transformers>=2.7"]
dev = ["pytest>=8.0", "hypothesis>=6.98", "httpx>=0.27", "fpdf2>=2.8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
